# modelswap-replay

./: AGENTS.md  PRODUCT_BRIEF.md  README.md  STATUS.md  SYSTEM_MAP.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
cli/: __init__.py  main.py
config/: routes.yaml
decisions/model-swap/: .gitkeep
docs/: first-pr.md  product-brief.md  system-map.md
modelswap_replay/: __init__.py  __main__.py  cli.py  model.py  rendering.py  scoring.py
reports/: fixture-candidate-v1-customer-support.jsonl
schemas/: decision-record.schema.json  route.schema.json
scripts/: revert_threshold_present.py  spec_check.py  validate_schemas.py  voice_lint.py
specs/0001-foundation/: acceptance.md  design.md  requirements.md  tasks.md
specs/0002-design/: acceptance.md  design.md  requirements.md  tasks.md
src/: __init__.py
src/decide/: __init__.py  verdict.py
src/models/: __init__.py  route_registry.py
src/render/: __init__.py  decision_record.py
src/replay/: __init__.py  replay_runner.py
src/sampler/: __init__.py  traffic_sampler.py
src/score/: __init__.py  eval_runner.py  llm_judge.py
tests/: __init__.py  support.py  test_determinism.py  test_end_to_end.py  test_render.py  test_replay.py  test_replay_cli.py  test_sampler.py  test_show.py  test_verdict.py
tests/fixtures/: bad_front_matter.md  routes.yaml
tests/fixtures/expected/: fixture-candidate-v1-customer-support.md
tests/fixtures/recorded_responses/fixture-candidate-v1/: trace-cs-001.json  trace-cs-002.json  trace-cs-003.json  trace-cs-004.json  trace-cs-005.json  (+1 more)
(+1 files in other folders)
